--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.container {
+  max-width: 30%;
+  max-height: 30%;
+}
+
 textarea {
     display: block;
     width: 100%;
