--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,11 @@
     background-attachment: fixed;
     margin-top: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    height: 250px;
+    width: 250px;
 }
 
-.container {
-  max-width: 30%;
-  max-height: 30%;
-}
+
 
 textarea {
     display: block;
