--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,7 @@
     background-attachment: fixed;
     margin-top: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: 250px;
-    width: 250px;
 }
-
-
 
 textarea {
     display: block;
@@ -77,7 +73,7 @@ img {
   .sidenav a {font-size: 18px;}
 }
 
-body {
+body{
 
-    background-image: url("../water.jpg");
+    background: img("water.jpg");
 }
