--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ img {
     transition: 0.5s;
     padding-top: 60px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    white-space: nowrap;
 }
 
 .sidenav a {
@@ -49,6 +50,8 @@ img {
     color: #1974fc;
     display: block;
     transition: 0.3s;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .sidenav a:hover {
